fix: anime titles on display page now implement ellipsis instead of overflowing

--- a/views/style.css
+++ b/views/style.css
@@ -15,6 +15,12 @@
 
     .linked {
         font-size: 28 !important;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        line-clamp: 2;
+        -webkit-box-orient: vertical;
     }
 
     .fvfTabBoxeA {
@@ -368,6 +374,12 @@ a {
 
 .linked {
     font-family: 'Inter-Bold', 'Inter', sans-serif;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .animetitleps {
